fix tag links on 404. Fix non-centered site title on mobile

--- a/themes/shuffle/assets/css/style.css
+++ b/themes/shuffle/assets/css/style.css
@@ -129,6 +129,7 @@ td {
     line-height: 1.3;
     margin: 0;
     padding: 0;
+    text-align: center;
     color: var(--color-dark) !important;
     word-wrap: break-word;
 }
